[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/InventoryItem.gd" type="Script" id=1]
[ext_resource path="res://Assets/Colored/genericItem_color_153.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 24, 24 )

[node name="InventoryItem" type="Area2D" groups=[
"Inventory Item",
]]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )
[connection signal="area_entered" from="." to="." method="_on_InventoryItem_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_InventoryItem_area_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_InventoryItem_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_InventoryItem_mouse_exited"]
